--- a/src/test/java/com/refactor/practice/baseline.html
+++ b/src/test/java/com/refactor/practice/baseline.html
@@ -1,6 +1,6 @@
 <H1>Rentals for <EM>user1</EM></H1><P>
-  regular movie: 3.5<BR>
-  new movie: 6.0<BR>
-  children movie: 4.5<BR>
+	regular movie:	3.5<BR>
+	new movie:	6.0<BR>
+	children movie:	4.5<BR>
 <P>You owe <EM>14.0</EM><P>
-  On this rental you earned <EM>4</EM> frequent re
+  On this rental you earned <EM>4</EM> frequent renter points<P>
